Study Case 2/Twittor/K8S/kafkaapp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafkaapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafkaapp
  template:
    metadata:
      labels:
        app: kafkaapp
    spec:
      containers:
        - name: kafkaapp
          image: irvan124/kafkaapp:latest
---
apiVersion: v1
kind: Service
metadata:
  name: kafkaapp-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: kafkaapp
  ports:
    - name: kafkaapp
      protocol: TCP
      port: 80
      targetPort: 80
