Study Case 2/Twittor/K8S/kafkacreatetopics-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafkacreatetopics-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafkacreatetopics
  template:
    metadata:
      labels:
        app: kafkacreatetopics
    spec:
      containers:
        - name: kafkacreatetopics
          image: irvan124/kafkacreatetopic:latest
---
apiVersion: v1
kind: Service
metadata:
  name: kafkacreatetopic-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: kafkacreatetopics
  ports:
    - name: kafkacreatetopics
      protocol: TCP
      port: 80
      targetPort: 80
