Study Case 2/Twittor/K8S/twittorapi-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twittorapi-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twittorapiservice
  template:
    metadata:
      labels:
        app: twittorapiservice
    spec:
      containers:
        - name: twittorapiservice
          image: irvan124/twittorapi:latest
---
apiVersion: v1
kind: Service
metadata:
  name: twittorapi-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: twittorapiservice
  ports:
    - name: twittorapiservice
      protocol: TCP
      port: 80
      targetPort: 80
