Study Case 2/Twittor/K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: devbootcamp.com
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: authserver-clusterip-srv
                port:
                  number: 80
          - path: /api/enrollments
            pathType: Prefix
            backend:
              service:
                name: enrollmentservice-clusterip-srv
                port:
                  number: 80
          - path: /api/courses
            pathType: Prefix
            backend:
              service:
                name: enrollmentservice-clusterip-srv
                port:
                  number: 80
          - path: /api/students
            pathType: Prefix
            backend:
              service:
                name: enrollmentservice-clusterip-srv
                port:
                  number: 80
          - path: /api/c/enrollments
            pathType: Prefix
            backend:
              service:
                name: paymentservice-clusterip-srv
                port:
                  number: 80
    - host: devbootcamp-graphql.com
      http:
        paths:
          - backend:
              service:
                name: twittorapi-clusterip-srv
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: kafkaapp-clusterip-srv
                port:
                  number: 80
            path: /app
            pathType: Prefix
          - backend:
              service:
                name: kafkalistenerapp-clusterip-srv
                port:
                  number: 80
            path: /listener
            pathType: Prefix
